# tensorflow-recommenders-demo

./: README.md  main.py  pyproject.toml
models/: MovieModel.py  MovielensModel.py  UserModel.py
saved_model/my_recommender/: fingerprint.pb  saved_model.pb
saved_model/my_recommender/variables/: variables.data-00000-of-00001  variables.index
src/: data_utils.py  train.py
