[project]
name = "tensorflow-recommenders-demo"
version = "0.1.0"
dependencies = [
    "numpy<2.0.0",
    "tensorflow==2.11.0",
    "tensorflow-recommenders==0.7.2",
    "tensorflow-datasets==4.8.3",
]
requires-python = ">=3.9,<3.12"

[tool.uv]
managed = true
override-dependencies = [
    "tensorflow-io-gcs-filesystem; sys_platform != 'win32'",
    #"array-record==0.4.0"
]